--- a/assets/index.html
+++ b/assets/index.html
@@ -16,11 +16,8 @@
       </a>
     </h1>
     <nav>
-      <!-- Unordered list element -->
       <ul>
-        <!-- List item element-->
         <li>
-          <!-- Anchor element -->
           <a href="#about-me">About Me</a>
         </li>
         <li>
@@ -47,43 +44,42 @@
   <section id="about-me" class="intro">
     <h2 class="section-title primary-border">About Me</h2>
     <p>
-      butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue
-      Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin
-      fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
-      sustainable Intelligentsia umami deep v craft
+      My name is Xavier Fegan and I am from Mansfield, Connecticut just minutes from the University of Connecticut. I graduated from the University of Connect in 2017 with me Sociology degree, but I am now looking to change my career. 
+    </p>
+    <br>
+    <p> I am married to my high school sweatheart and have 1 son that is 3 years old and i have my second child on the way. Coding is a new found pleasure of mine and would love to have a career in this field
     </p>
   </section>
 
   <!-- "work" section -->
   <section id="work" class="steps">
-    <h2 class="section-title secondary-border">Work</h2>
+    <h2 class="section-title primary-border">Work</h2>
 
     <div class="surfer">
-      <img src="./assets/images/step-1.svg" alt="" />
       <h3>Surf Report</h3>
       <p>MERN Stack</p>
     </div>
+
     <div class="two-surfer">
-    <div class="surfer-small"> 
-      <img src="./assets/images/step-2.svg" alt="" />
+    <div class="led-wall"> 
+      <img src="" alt="" />
       <h3>LED Wall</h3>
       <p>Node/IoT</p>
     </div>
-
-<div class="surfer-small">
-      <img src="./assets/images/step-3.svg" alt="" />
+<div class="calculator">
+      <img src="./" alt="" />
       <h3>Calculator</h3>
       <p>React/JavaScript/CSS</p>
     </div>
-
 </div>
+
 <div class="two-surfer">
-    <div class="surfer-small">
-      <img src="./assets/images/step-4.svg" alt="" />
+    <div class="pastel-puzzels">
+      <img src="" alt="" />
       <h3>Pastel Puzzels</h3>
       <p>MERN Stack</p>
     </div>
-    <div class="surfer-small">
+    <div class="run-buddy">
       <img src="" alt="">
       <h3>Run Buddy</h3>
       <p>HTML/CSS</p>
