added images and fixed css

--- a/assets/index.html
+++ b/assets/index.html
@@ -35,27 +35,30 @@
 
   <!-- hero/jumbotron -->
   <section class="hero">
+    <img src="./images/profile-photo.jpg" alt="Photo of Xavier Fegan">
     <div class="hero-form">
-      <h2>Coding Portfolio</h2>
+      <h2>“Everybody should learn to program a computer, because it teaches you how to think.” -Steven Hawkins</h2>
     </div>
   </section>
 
   <!-- "aboutme" section -->
-  <section id="about-me" class="intro">
-    <h2 class="section-title primary-border">About Me</h2>
-    <p>
-      My name is Xavier Fegan and I am from Mansfield, Connecticut just minutes from the University of Connecticut. I graduated from the University of Connect in 2017 with me Sociology degree, but I am now looking to change my career. 
+  <section id="aboutme" class="intro">
+    <div class="primary-title">About Me</div>
+    <div class="intro-p">
+      <p>
+      My name is Xavier Fegan and I am from Mansfield, Connecticut just minutes from the University of Connecticut. I graduated from the University of Connect in 2017 with a Sociology degree, but I am now looking to change my career. Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, ex eos! Tenetur assumenda asperiores perferendis, laborum voluptas blanditiis adipisci eum ab, temporibus iure vero in doloribus, nulla soluta repellendus eos?
     </p>
     <br>
-    <p> I am married to my high school sweatheart and have 1 son that is 3 years old and i have my second child on the way. Coding is a new found pleasure of mine and would love to have a career in this field
+    <p> I am married to my high school sweatheart and have 1 son that is 3 years old and I have my second child on the way. Coding is a new found pleasure of mine and would love to have a career in this field. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quibusdam aspernatur atque itaque necessitatibus accusamus doloribus. Pariatur nemo aliquam explicabo nesciunt! Distinctio eveniet possimus laboriosam molestiae reprehenderit sequi non similique?
     </p>
+  </div>
   </section>
 
   <!-- "work" section -->
   <section id="work" class="steps">
-    <h2 class="section-title primary-border">Work</h2>
-
-    <div class="surfer">
+  <div class="primary-title">Work</div> 
+    
+  <div class="surfer">
       <h3>Surf Report</h3>
       <p>MERN Stack</p>
     </div>
