--- a/assets/index.html
+++ b/assets/index.html
@@ -55,20 +55,20 @@
   </section>
 
   <!-- "work" section -->
-  <section id="work" class="steps">
+  <section id="work" class="my-work">
   <div class="primary-title">Work</div> 
     
   <div class="surfer">
-      <h3>Surf Report</h3>
-      <p>MERN Stack</p>
+      <a href="http://www.google.com"></a>
+      <span><a href="#" style="text-decoration: none;">Surf Report</a></span>
     </div>
 
-    <div class="two-surfer">
-    <div class="led-wall"> 
-      <img src="" alt="" />
+    <div class="led-wall">
+    <div class="flex-item"> 
       <h3>LED Wall</h3>
       <p>Node/IoT</p>
     </div>
+
 <div class="calculator">
       <img src="./" alt="" />
       <h3>Calculator</h3>
@@ -82,6 +82,7 @@
       <h3>Pastel Puzzels</h3>
       <p>MERN Stack</p>
     </div>
+
     <div class="run-buddy">
       <img src="" alt="">
       <h3>Run Buddy</h3>
