adding contact info

--- a/assets/index.html
+++ b/assets/index.html
@@ -89,10 +89,10 @@
   </section>
 
   <!-- contact info -->
-  <footer id="contact-me">
-    <h2>Contact</h2>
-    <div> 860-420-6876 </div>
-  </footer>
+    <section id="contact" class="contact-me">
+      <div class="primary-title">Contact Me</div>
+
+
 </body>
 
 </html>
