--- a/assets/index.html
+++ b/assets/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Xavier Fegan's Portfolio</title>
   <link rel="stylesheet" href="./css/style.css" />
 </head>
@@ -91,7 +93,9 @@
   <!-- contact info -->
     <section id="contact" class="contact-me">
       <div class="primary-title">Contact Me</div>
-
+      
+  
+    </section>
 
 </body>
 
