contact added need to rearrange

--- a/assets/index.html
+++ b/assets/index.html
@@ -98,7 +98,7 @@
           <ul  >
               <li>             
                 <p id="phone">
-                <a href="8604206876">Phone Number: 860-420-6876</a>  
+                <a href="8604206876">860-420-6876</a>  
                 </p>                 
              </li>
            
